demo/manifests/0-config.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: shortener
