demo/manifests/1-stores.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: shortener
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      &pod-labels
      app: redis
  template:
    metadata:
      labels:
        <<: *pod-labels
    spec:
      containers:
      - name: redis
        image: redis
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - "redis-cli ping"
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3 
          failureThreshold: 5
        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: db-hsvc
  namespace: shortener
spec:
  clusterIP: None
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: shortener
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: shortener
spec:
  replicas: 1
  serviceName: db-hsvc
  selector:
    matchLabels:
      &pod-labels
      app: db
  volumeClaimTemplates:
  - metadata:
      name: pgdata
    spec:
      storageClassName: csi-hostpath-sc
      accessModes: [ ReadWriteOncePod ]
      resources:
        requests:
          storage: 1Gi
  template:
    metadata:
      labels:
        <<: *pod-labels
    spec:
      volumes:
      - name: initsql
        configMap:
          name: shortener
      containers:
      - name: db
        image: postgres
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - "pg_isready -U postgres"
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 3 
          failureThreshold: 5
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: initsql
          mountPath: /docker-entrypoint-initdb.d
          readOnly: true
        - name: pgdata
          mountPath: /var/lib/postgresql
