demo/manifests/3-loadgenerator.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loadgenerator
  namespace: shortener
spec:
  type: ClusterIP
  selector:
    app: loadgenerator
  ports:
  - port: 8089
    containerPort: 8089

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  namespace: shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      &pod-labels
      app: loadgenerator
  template:
    metadata:
      labels:
        <<: *pod-labels
      annotations:
        instrumentation.opentelemetry.io/inject-python: 'false'
    spec:
      containers:
      - name: loadgenerator
        image: chukmunnlee/shortener-loadbalancer:v1.1 
        imagePullPolicy: IfNotPresent
        ports:
        - targetPort: 8089

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loadgenerator-httproute
  namespace: shortener
spec:
  parentRefs:
  - name: default-gtw
    namespace: default
    port: 80
  hostnames:
  - locust.192.168.39.200.nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: loadgenerator
      namespace: shortener
      port: 8089
